# sp-exercise

./: Cargo.toml  README.md
db/: db.sqlite
migrations/: 20250801125946_init.sql
src/: db.rs  error.rs  main.rs  orders.rs
